--- a/src/components/NewNoteForm/style.css
+++ b/src/components/NewNoteForm/style.css
@@ -1,27 +1,34 @@
-.form-note {
-    flex-grow: 2;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
-    z-index: 1;
-    max-height: 200px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px 40px;
-  }
+.form-note {  
+  display: inline-flex;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  min-height: 200px;
+  min-width: 300px;
+  flex-direction: column;
+  padding: 20px 20px;
+  margin: 5px;
+}
   .form-note_input {
     resize: none;
-    max-height: 130px;
-    margin-top: 8px;
     padding: 15px;
     border: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
+    display: block;
   }
   
   .form-note_submit {
     align-self: flex-end;
-    width: 30%; 
+    float: inline-end;
+    width: 100px;
+    margin-top: 15px;
     color: white;
-    background-color: #7b79ff;
+    background-color: #7954ff;
     font-weight: 400;
+    height: 30px;
+  }
+  
+  .form-note_submit[disabled]{
+    color: white;
+    background-color: #c0afff;
   }
   
