--- a/src/components/NoteList/style.css
+++ b/src/components/NoteList/style.css
@@ -1,14 +1,13 @@
 .notes-list {
-    background-color: var(--fundo);
     flex-grow: 3;
     display: grid;
     grid-template-columns: auto auto;
     list-style-type: none;
     padding-left: 24px;
-    padding-top: 24px;
+    margin: 5px;
   }
   .notes-list_item {
-    margin: 12px;
+    margin-right: 12px;
     max-width: 240px;
     max-height: 400px;
     display: inline;
