--- a/src/components/NoteCard/style.css
+++ b/src/components/NoteCard/style.css
@@ -52,7 +52,7 @@
     
     /* Adicionar uma cor de fundo cinza ao passar o mouse */
     .container:hover input ~ .checkmark {
-      background-color: #ccc;
+      background-color: rgba(31, 106, 150, 0.315);
       transform: scale(1.1);
     }
     
@@ -82,7 +82,8 @@
 
 
 
-  .form-delete-input {
+  .form-delete-input,
+  .form-edit-input {
     padding-top: 3px;
     margin: 5px;
     align-self: flex-end;
@@ -92,7 +93,8 @@
     transform: scale(1.2);
   }
 
-  .form-delete-input:hover {
+  .form-delete-input:hover,
+  .form-edit-input:hover {
     transform: scale(1.3);
     color:rgb(31, 106, 150);
   }
