--- a/client/src/assets/App.css
+++ b/client/src/assets/App.css
@@ -1,3 +1,20 @@
-.home-list{
-    display: flex;
-  }
+.home-list {
+  display: flex;
+}
+
+.header {
+  background-color: rgb(237, 225, 255);
+  margin: -8px;
+  z-index: 999999;
+  padding: 5px;
+}
+
+
+.logout-button {
+  background: #d6caff;
+  border: 1px solid #d6caff;
+}
+
+.logout-button:hover {
+  background: #7954ff;
+}
