--- a/client/src/components/NewNoteForm/style.css
+++ b/client/src/components/NewNoteForm/style.css
@@ -1,34 +1,34 @@
-.form-note {  
+.form-note {
   display: inline-flex;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
   min-height: 200px;
   min-width: 300px;
   flex-direction: column;
   padding: 20px 20px;
-  margin: 5px;
+  margin: 20px 5px;
 }
-  .form-note_input {
-    resize: none;
-    padding: 15px;
-    border: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
-    display: block;
-  }
-  
-  .form-note_submit {
-    align-self: flex-end;
-    float: inline-end;
-    width: 100px;
-    margin-top: 15px;
-    color: white;
-    background-color: #7954ff;
-    font-weight: 400;
-    height: 30px;
-  }
-  
-  .form-note_submit[disabled]{
-    color: white;
-    background-color: #c0afff;
-  }
-  
+
+.form-note_input {
+  resize: none;
+  padding: 15px;
+  border: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+  display: block;
+}
+
+.form-note_submit {
+  align-self: flex-end;
+  float: inline-end;
+  width: 100px;
+  margin-top: 15px;
+  color: white;
+  background-color: #7954ff;
+  font-weight: 400;
+  height: 30px;
+}
+
+.form-note_submit[disabled] {
+  color: white;
+  background-color: #c0afff;
+}
