--- a/client/src/components/NoteList/style.css
+++ b/client/src/components/NoteList/style.css
@@ -1,14 +1,16 @@
 .notes-list {
-    flex-grow: 3;
-    display: grid;
-    grid-template-columns: auto auto;
-    list-style-type: none;
-    padding-left: 24px;
-    margin: 5px;
-  }
-  .notes-list_item {
-    margin-right: 12px;
-    max-width: 240px;
-    max-height: 400px;
-    display: inline;
-  }
+  flex-grow: 3;
+  display: grid;
+  grid-template-columns: auto auto;
+  list-style-type: none;
+  padding-left: 24px;
+  margin-right: 5px;
+  margin-top: 20px;
+}
+
+.notes-list_item {
+  margin-right: 12px;
+  max-width: 240px;
+  max-height: 400px;
+  display: inline;
+}
